add pre-commit, apply linting

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,15 @@ replace = __version__ = '{new_version}'
 universal = 1
 
 [flake8]
-exclude = docs
+max-line-length = 88
+exclude = docs,
+    benchmarks,
+    */api.py,   
+    */__init__.py,
+ignore = E203, 
+    E266, 
+    E302, 
+    E501,
+    E741,
+    W503,
+
