run tests on path changes

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,14 @@
 name: Run tests
 
-on: [pull_request, push]
+on: 
+  push:
+    paths:
+       - '**.py'
+       - '**run-tests.yml'
+  pull_request:
+    paths:
+       - '**.py'
+       - '**run-tests.yml'
 
 jobs:
   build:
