--- a/.github/workflows/style-checks.yml
+++ b/.github/workflows/style-checks.yml
@@ -1,5 +1,15 @@
 name: Style Checks
-on: [push, pull_request]
+on: 
+  push:
+    paths:
+       - '**.py'
+       - '**style-checks.yml'
+       - 'tests/lint_requirements.txt'
+  pull_request:
+    paths:
+       - '**.py'
+       - '**style-checks.yml'
+       - 'tests/lint_requirements.txt'
 
 jobs:
   flake8:
