--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,15 +2,15 @@ pip==19.2.3
 bump2version==0.5.11
 wheel==0.33.6
 watchdog==0.9.0
-flake8==3.7.8
 tox==3.14.0
 coverage==4.5.4
 Sphinx==1.8.5
+jinja2<3.1.0
+nbsphinx
 twine==1.14.0
 
 pytest==6.2.4
 pytest-cov
-black==21.7b0
 yt>4.1
 pre-commit
 
