--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,14 +5,10 @@ repos:
     - id: black
       language_version: python3
 -   repo: https://github.com/timothycrosley/isort
-    rev: '5.6.4'  # keep in sync with tests/lint_requirements.txt
+    rev: '5.12.0'  # keep in sync with tests/lint_requirements.txt
     hooks:
     -   id: isort
--   repo: https://gitlab.com/pycqa/flake8
-    rev: '3.8.1'  # keep in sync with tests/lint_requirements.txt
+-   repo: https://github.com/PyCQA/flake8
+    rev: '6.0.0' # keep in sync with tests/lint_requirements.txt
     hooks:
     -   id: flake8
--   repo: https://github.com/ikamensh/flynt
-    rev: '0.52'  # keep in sync with tests/lint_requirements.txt
-    hooks:
-    -   id: flynt
