--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: Run tests
 
-on: 
+on:
   pull_request:
     paths:
        - '**.py'
@@ -20,15 +20,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install graphviz 
+    - name: Install graphviz
       run: sudo apt-get install graphviz
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements_dev.txt
     - name: Setup inheritance_explorer
       run: |
-        python -m pip install -e .
+        python -m pip install -e .[dev]
     - name: Run Tests
       run: pytest --cov=./ --cov-report=xml:coverage/coverage.xml
 
