--- a/.github/workflows/style-checks.yml
+++ b/.github/workflows/style-checks.yml
@@ -1,10 +1,9 @@
 name: Style Checks
-on: 
+on:
   pull_request:
     paths:
        - '**.py'
        - '**style-checks.yml'
-       - 'tests/lint_requirements.txt'
 
 jobs:
   flake8:
@@ -18,7 +17,7 @@ jobs:
         python-version: 3.9
     - name: install
       id: install
-      run : pip install -r tests/lint_requirements.txt
+      run : pip install .[lint]
 
     - name: check
       id: flake8
@@ -37,7 +36,7 @@ jobs:
         python-version: 3.9
     - name: install
       id: install
-      run : pip install -r tests/lint_requirements.txt
+      run : pip install .[lint]
 
     - name: check
       id: black
@@ -56,7 +55,7 @@ jobs:
         python-version: 3.9
     - name: install
       id: install
-      run : pip install -r tests/lint_requirements.txt
+      run : pip install .[lint]
 
     - name: check
       id: isort
