--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 repos:
 -   repo: https://github.com/ambv/black
-    rev: 22.8.0  # keep in sync with tests/lint_requirements.txt
+    rev: 22.8.0  # keep in sync with pyproject.toml
     hooks:
     - id: black
       language_version: python3
 -   repo: https://github.com/timothycrosley/isort
-    rev: '5.12.0'  # keep in sync with tests/lint_requirements.txt
+    rev: '5.12.0'  # keep in sync with pyproject.toml
     hooks:
     -   id: isort
 -   repo: https://github.com/PyCQA/flake8
-    rev: '6.0.0' # keep in sync with tests/lint_requirements.txt
+    rev: '6.0.0' # keep in sync with pyproject.toml
     hooks:
     -   id: flake8
