fix rtd install

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,7 +12,11 @@ build:
     python: "3.10"
 
 # Optionally declare the Python requirements required to build your docs
+
 python:
-   install:
-   - requirements: requirements.txt
-   - requirements: requirements_dev.txt
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+        - dev
