--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,8 +11,7 @@ build:
   tools:
     python: "3.10"
 
-# Optionally declare the Python requirements required to build your docs
-
+# installation, will result in pip install .[docs, dev]
 python:
   install:
     - method: pip
