--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,8 +62,8 @@ dev = [
     "pre-commit",
 ]
 docs = [
-    "Sphinx==1.8.5",
-    "jinja2<3.1.0",
+    "Sphinx==7.3.7",
+    "jinja2==3.1.4",
     "nbsphinx",
 ]
 lint = [
