--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,3 +67,15 @@ docs = [
     "nbsphinx",
 ]
 
+[tool.mypy]
+files = ["inheritance_explorer",]
+python_version = "3.10"
+warn_unused_configs = true
+strict = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
+warn_unreachable = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+implicit_optional = true
+disable_error_code = ["import-untyped", "import-not-found"]
+no_implicit_reexport = false
